[tool.poetry]
name = "tinder"
version = "0.1.0"
description = ""
authors = ["developer"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.1.3"
psycopg2-binary = "^2.9.10"
djangorestframework = "^3.15.2"
django-environ = "^0.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
